--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -261,7 +261,7 @@
     //"item.mubble.baldi_head": "<newline>",
 
     "item.mubble.mayro_cap": "dɐƆ s,oɹʎɐW",
-    "item.mubble.noteblock.mubble_head": "pɐǝH s,ʞɔolᗺǝʇoN",
+    "item.mubble.noteblock_head": "pɐǝH s,ʞɔolᗺǝʇoN",
 
     //ENTITIES
     "entity.toad": "pɐo┴",
@@ -309,6 +309,6 @@
     //OTHER
     "item.mubble.cappy.secret_status": "(: ˙˙˙lɐxopɐɹɐd ʍoH",
     "item.mubble.bandana.secret_status": "¡§6lǝxᴉԀ§r 'noʎ ɹoɟ s,ʇɐɥ┴",
-    "item.mubble.noteblock.mubble_head.secret_status": "¡§6uɐʌƎ§r 'pɐǝɥ ɹnoʎ uo sᴉɥʇ pɐɥ ʎpɐǝɹlɐ noʎ ʇɥƃnoɥʇ I ¡ʎǝH",
+    "item.mubble.noteblock_head.secret_status": "¡§6uɐʌƎ§r 'pɐǝɥ ɹnoʎ uo sᴉɥʇ pɐɥ ʎpɐǝɹlɐ noʎ ʇɥƃnoɥʇ I ¡ʎǝH",
     "item.mubble.mayro_cap.secret_status": "¿,,§6ǝᴉssoS§r,, ˙ɹW 'noʎ ʇ,uǝɹɐ 'ʇsɐǝl ǝɥʇ ʇᴉ spǝǝu oɥʍ ǝuo ǝɥʇ ǝɹ,noʎ 'uo ǝɯoƆ"
 }
