--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -226,10 +226,10 @@
     "item.mubble.record.fly_octo_fly.desc": "Splatoon 2 - Fly Octo Fly",
     "item.mubble.record.vampire_killer.desc": "Castlevania Judgement - Vampire Killer",
 
-    "item.mubble.record.nb_sweden.desc": "C418 - Sweden (Noteblock.mubble Remix)",
-    "item.mubble.record.nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (Noteblock.mubble Remix)",
-    "item.mubble.record.nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (Noteblock.mubble Remix)",
-    "item.mubble.record.nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (Noteblock.mubble Remix)",
+    "item.mubble.record.nb_sweden.desc": "C418 - Sweden (NoteBlock Remix)",
+    "item.mubble.record.nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)",
+    "item.mubble.record.nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
+    "item.mubble.record.nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)",
 
     //COSTUMES
     "item.mubble.headphones": "Kopfhörer",
@@ -261,7 +261,7 @@
     "item.mubble.baldi_head": "Baldis Hut",
 
     "item.mubble.mayro_cap": "Mayros Mütze",
-    "item.mubble.noteblock.mubble_head": "Notenblock.mubble's Kopf",
+    "item.mubble.noteblock_head": "Notenblock.mubble's Kopf",
 
     //ENTITIES
     "entity.toad": "Toad",
@@ -309,6 +309,6 @@
     //OTHER
     "item.mubble.cappy.secret_status": "Wie widersprüchlich... :)",
     "item.mubble.bandana.secret_status": "Das ist für dich, §6Pixel§r!",
-    "item.mubble.noteblock.mubble_head.secret_status": "Hey! Ich dachte, du hättest das schon auf dem Kopf, §6Evan§r!",
+    "item.mubble.noteblock_head.secret_status": "Hey! Ich dachte, du hättest das schon auf dem Kopf, §6Evan§r!",
     "item.mubble.mayro_cap.secret_status": "Komm schon, du bist der jenige der es am wenigsten braucht. Bist du's nicht, Mr. \"§6Sossie§r\"?"
 }
