--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -226,10 +226,10 @@
     "item.mubble.record.fly_octo_fly.desc": "Splatoon 2 - Fly Octo Fly",
     "item.mubble.record.vampire_killer.desc": "Castlevania Judgement - Vampire Killer",
 
-    "item.mubble.record.nb_sweden.desc": "C418 - Sweden (Noteblock.mubble Remix)",
-    "item.mubble.record.nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (Noteblock.mubble Remix)",
-    "item.mubble.record.nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (Noteblock.mubble Remix)",
-    "item.mubble.record.nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (Noteblock.mubble Remix)",
+    "item.mubble.record.nb_sweden.desc": "C418 - Sweden (NoteBlock Remix)",
+    "item.mubble.record.nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)",
+    "item.mubble.record.nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
+    "item.mubble.record.nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)",
 
     //COSTUMES
     "item.mubble.headphones": "Headphones",
@@ -261,7 +261,7 @@
     //"item.mubble.baldi_head": "<newline>",
 
     "item.mubble.mayro_cap": "Mayro's Cap",
-    "item.mubble.noteblock.mubble_head": "Noteblock.mubble's Head",
+    "item.mubble.noteblock_head": "NoteBlock's Head",
 
     //ENTITIES
     "entity.toad": "Toad",
@@ -309,6 +309,6 @@
     //OTHER
     "item.mubble.cappy.secret_status": "How paradoxal... :)",
     "item.mubble.bandana.secret_status": "That's for you, §6Pixel§r!",
-    "item.mubble.noteblock.mubble_head.secret_status": "Hey! I thought you already had this on your head, §6Evan§r!",
+    "item.mubble.noteblock_head.secret_status": "Hey! I thought you already had this on your head, §6Evan§r!",
     "item.mubble.mayro_cap.secret_status": "Come on, you're the one who needs it the least, aren't you, Mr. \"§6Sossie§r\"?"
 }
