--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -226,10 +226,10 @@
     "item.mubble.record.fly_octo_fly.desc": "Splatoon 2 - Fly Octo Fly",
     "item.mubble.record.vampire_killer.desc": "Castlevania Judgement - Vampire Killer",
 
-    "item.mubble.record.nb_sweden.desc": "C418 - Sweden (Noteblock.mubble Remix)",
-    "item.mubble.record.nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (Noteblock.mubble Remix)",
-    "item.mubble.record.nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (Noteblock.mubble Remix)",
-    "item.mubble.record.nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (Noteblock.mubble Remix)",
+    "item.mubble.record.nb_sweden.desc": "C418 - Sweden (NoteBlock Remix)",
+    "item.mubble.record.nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)",
+    "item.mubble.record.nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
+    "item.mubble.record.nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)",
 
     //COSTUMES
     "item.mubble.headphones": "hedponz",
@@ -261,7 +261,7 @@
     "item.mubble.baldi_head": "besicz hed",
 
     "item.mubble.mayro_cap": "Mayro hat",
-    "item.mubble.noteblock.mubble_head": "Noteblock.mubble hed",
+    "item.mubble.noteblock_head": "NoteBlock hed",
 
     //ENTITIES
     "entity.toad": "tod",
