Added things and fixed languages

--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -268,15 +268,15 @@
     "entity.chincho": "Chincho",
 
     //SUBTITLES
-    "subtitles.block.mubble.question_block.mubble.loot.power_up": "?-block.mubble gibt Power-Up",
-    "subtitles.block.mubble.question_block.mubble.loot.coin": "?-block.mubble gibt Münze",
-    "subtitles.block.mubble.note_block.mubble.jump": "Notenblock.mubble genutzt",
-    "subtitles.block.mubble.rewind_block.mubble.disappear": "Rückspulblock.mubble verschwindet",
-    "subtitles.block.mubble.rewind_block.mubble.reappear": "Rückspulblock.mubble erscheint wieder",
-    "subtitles.item.mubble.annoying_dog.disappear": "Nerviger Hund verschwindet",
-    "subtitles.item.mubble.annoying_dog.waf": "Nerviger Hund bellt",
-    "subtitles.item.mubble.cape_feather.use": "Federmütze benutzt",
-    "subtitles.item.mubble.smash_ball.use": "Smash Ball benutzt",
+    "subtitles.block.question_block.mubble.loot.power_up": "?-block.mubble gibt Power-Up",
+    "subtitles.block.question_block.mubble.loot.coin": "?-block.mubble gibt Münze",
+    "subtitles.block.note_block.jump": "Notenblock.mubble genutzt",
+    "subtitles.block.rewind_block.mubble.disappear": "Rückspulblock.mubble verschwindet",
+    "subtitles.block.rewind_block.mubble.reappear": "Rückspulblock.mubble erscheint wieder",
+    "subtitles.item.annoying_dog.disappear": "Nerviger Hund verschwindet",
+    "subtitles.item.annoying_dog.bark": "Nerviger Hund bellt",
+    "subtitles.item.cape_feather.use": "Federmütze benutzt",
+    "subtitles.item.smash_ball.use": "Smash Ball benutzt",
     "subtitles.costume.cappy.ambient": "Cappy murmelt",
     "subtitles.costume.cappy.ambient.nether": "Cappy geht der Schwund aus",
     "subtitles.costume.cappy.equip": "Cappy steigt auf jemands Kopf",
