--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -268,15 +268,15 @@
     "entity.chincho": "Chincho",
 
     //SUBTITLES
-    "subtitles.block.mubble.question_block.mubble.loot.power_up": "? block.mubble drops power up",
-    "subtitles.block.mubble.question_block.mubble.loot.coin": "? block.mubble drops coin",
-    //"subtitles.block.mubble.note_block.mubble.jump": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.disappear": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.reappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.disappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.waf": "<newline>",
-    "subtitles.item.mubble.cape_feather.use": "Cape Feather used",
-    "subtitles.item.mubble.smash_ball.use": "Smash Ball used",
+    "subtitles.block.question_block.mubble.loot.power_up": "? block.mubble drops power up",
+    "subtitles.block.question_block.mubble.loot.coin": "? block.mubble drops coin",
+    //"subtitles.block.note_block.jump": "<newline>",
+    //"subtitles.block.rewind_block.mubble.disappear": "<newline>",
+    //"subtitles.block.rewind_block.mubble.reappear": "<newline>",
+    //"subtitles.item.annoying_dog.disappear": "<newline>",
+    //"subtitles.item.annoying_dog.bark": "<newline>",
+    "subtitles.item.cape_feather.use": "Cape Feather used",
+    "subtitles.item.smash_ball.use": "Smash Ball used",
     //"subtitles.costume.cappy.ambient": "<newline>",
     //"subtitles.costume.cappy.ambient.nether": "<newline>",
     //"subtitles.costume.cappy.equip": "<newline>",
