--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -268,15 +268,15 @@
     "entity.chincho": "tostarenan mummy",
 
     //SUBTITLES
-    "subtitles.block.mubble.question_block.mubble.loot.super_mushroom": "BLOCO ???? drop supa mush",
-    "subtitles.block.mubble.question_block.mubble.loot.coin": "BLOCO ???? drop coin",
-    //"subtitles.block.mubble.note_block.mubble.jump": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.disappear": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.reappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.disappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.waf": "<newline>",
-    "subtitles.item.mubble.cape_feather.use": "cap that makes you high jumped was actully used!",
-    "subtitles.item.mubble.smash_ball.use": "sm4sh bol uzd",
+    "subtitles.block.question_block.mubble.loot.super_mushroom": "BLOCO ???? drop supa mush",
+    "subtitles.block.question_block.mubble.loot.coin": "BLOCO ???? drop coin",
+    //"subtitles.block.note_block.jump": "<newline>",
+    //"subtitles.block.rewind_block.mubble.disappear": "<newline>",
+    //"subtitles.block.rewind_block.mubble.reappear": "<newline>",
+    //"subtitles.item.annoying_dog.disappear": "<newline>",
+    //"subtitles.item.annoying_dog.bark": "<newline>",
+    "subtitles.item.cape_feather.use": "cap that makes you high jumped was actully used!",
+    "subtitles.item.smash_ball.use": "sm4sh bol uzd",
     //"subtitles.costume.cappy.ambient": "<newline>",
     //"subtitles.costume.cappy.ambient.nether": "<newline>",
     //"subtitles.costume.cappy.equip": "<newline>",
