--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -268,15 +268,15 @@
     "entity.chincho": "Chincho",
 
     //SUBTITLES
-    "subtitles.block.mubble.question_block.mubble.loot.super_mushroom": "?-blok plundert super paddenstoel",
-    "subtitles.block.mubble.question_block.mubble.loot.coin": "?-blok laat munt vallen",
-    "subtitles.block.mubble.note_block.mubble.jump": "Nootblock.mubble wordt gebruikt",
-    "subtitles.block.mubble.rewind_block.mubble.disappear": "Terugspoelblok verdwijnd",
-    "subtitles.block.mubble.rewind_block.mubble.reappear": "Terugspoelblok verschijnd",
-    "subtitles.item.mubble.annoying_dog.disappear": "Iritante hond verdrijnd",
-    "subtitles.item.mubble.annoying_dog.waf": "Iritante hond blaft",
-    "subtitles.item.mubble.cape_feather.use": "Capeveer wordt gebruikt",
-    "subtitles.item.mubble.smash_ball.use": "Smash bal wordt gebruikt",
+    "subtitles.block.question_block.mubble.loot.super_mushroom": "?-blok plundert super paddenstoel",
+    "subtitles.block.question_block.mubble.loot.coin": "?-blok laat munt vallen",
+    "subtitles.block.note_block.jump": "Nootblock.mubble wordt gebruikt",
+    "subtitles.block.rewind_block.mubble.disappear": "Terugspoelblok verdwijnd",
+    "subtitles.block.rewind_block.mubble.reappear": "Terugspoelblok verschijnd",
+    "subtitles.item.annoying_dog.disappear": "Iritante hond verdrijnd",
+    "subtitles.item.annoying_dog.bark": "Iritante hond blaft",
+    "subtitles.item.cape_feather.use": "Capeveer wordt gebruikt",
+    "subtitles.item.smash_ball.use": "Smash bal wordt gebruikt",
     "subtitles.costume.cappy.ambient": "Cappy mompelt",
     "subtitles.costume.cappy.ambient.nether": "Cappy raakt op",
     "subtitles.costume.cappy.equip": "Cappy kwam op iemand's hoofd",
