--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -268,15 +268,15 @@
     "entity.chincho": "Chincho",
 
     //SUBTITLES
-    "subtitles.block.mubble.question_block.mubble.loot.power_up": "Bloco de ? dropou um power up",
-    "subtitles.block.mubble.question_block.mubble.loot.coin": "Bloco de ? dropa uma moeda",
-    "subtitles.block.mubble.note_block.mubble.jump": "Note block.mubble used",
-    "subtitles.block.mubble.rewind_block.mubble.disappear": "Bloco de Rewind desaparece",
-    "subtitles.block.mubble.rewind_block.mubble.reappear": "Bloco de Rewind reaparece",
-    "subtitles.item.mubble.annoying_dog.disappear": "Cachorro Irritante desaparece",
-    "subtitles.item.mubble.annoying_dog.waf": "Cachorro Irritante late",
-    "subtitles.item.mubble.cape_feather.use": "Pena da Capa foi usada",
-    "subtitles.item.mubble.smash_ball.use": "Bola Smash foi usada",
+    "subtitles.block.question_block.mubble.loot.power_up": "Bloco de ? dropou um power up",
+    "subtitles.block.question_block.mubble.loot.coin": "Bloco de ? dropa uma moeda",
+    "subtitles.block.note_block.jump": "Note Block used",
+    "subtitles.block.rewind_block.mubble.disappear": "Bloco de Rewind desaparece",
+    "subtitles.block.rewind_block.mubble.reappear": "Bloco de Rewind reaparece",
+    "subtitles.item.annoying_dog.disappear": "Cachorro Irritante desaparece",
+    "subtitles.item.annoying_dog.bark": "Cachorro Irritante late",
+    "subtitles.item.cape_feather.use": "Pena da Capa foi usada",
+    "subtitles.item.smash_ball.use": "Bola Smash foi usada",
     "subtitles.costume.cappy.ambient": "Cappy murmura",
     "subtitles.costume.cappy.ambient.nether": "Cappy ficando sem vapor",
     "subtitles.costume.cappy.equip": "Cappy chegou na cabeça de alguém",
