--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -268,15 +268,15 @@
     "entity.chincho": "oɥɔuᴉɥƆ",
 
     //SUBTITLES
-    "subtitles.block.mubble.question_block.mubble.loot.super_mushroom": "ɯooɹɥsnɯ ɹǝdns sdoɹp ʞɔolᗺ ¿",
-    "subtitles.block.mubble.question_block.mubble.loot.coin": "uᴉoɔ sdoɹp ʞɔolᗺ ¿",
-    //"subtitles.block.mubble.note_block.mubble.jump": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.disappear": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.reappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.disappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.waf": "<newline>",
-    "subtitles.item.mubble.cape_feather.use": "pǝsn ɹǝɥʇɐǝℲ ǝdɐƆ",
-    "subtitles.item.mubble.smash_ball.use": "pǝsn llɐᗺ ɥsɐɯS",
+    "subtitles.block.question_block.mubble.loot.super_mushroom": "ɯooɹɥsnɯ ɹǝdns sdoɹp ʞɔolᗺ ¿",
+    "subtitles.block.question_block.mubble.loot.coin": "uᴉoɔ sdoɹp ʞɔolᗺ ¿",
+    //"subtitles.block.note_block.jump": "<newline>",
+    //"subtitles.block.rewind_block.mubble.disappear": "<newline>",
+    //"subtitles.block.rewind_block.mubble.reappear": "<newline>",
+    //"subtitles.item.annoying_dog.disappear": "<newline>",
+    //"subtitles.item.annoying_dog.bark": "<newline>",
+    "subtitles.item.cape_feather.use": "pǝsn ɹǝɥʇɐǝℲ ǝdɐƆ",
+    "subtitles.item.smash_ball.use": "pǝsn llɐᗺ ɥsɐɯS",
     //"subtitles.costume.cappy.ambient": "<newline>",
     //"subtitles.costume.cappy.ambient.nether": "<newline>",
     //"subtitles.costume.cappy.equip": "<newline>",
