--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -177,7 +177,7 @@
     "block.mubble.elder_pebbles": "Elder Pebbles",
     "block.mubble.space_matter": "Space Matter",
     "block.mubble.space_obsidian": "Space Obsidian",
-
+    
     "block.mubble.blue_puyo": "Blue Puyo",
     "block.mubble.turquoise_puyo": "Turquoise Puyo",
     "block.mubble.green_puyo": "Green Puyo",
@@ -190,7 +190,6 @@
     "block.mubble.iron_puyo": "Iron Puyo",
     "block.mubble.puyo_block": "Puyo Block",
 
-    "block.mubble.rewind_block": "Rewind Block",
     "block.mubble.koretato_block": "Koretato Block",
 
     //ITEMS
@@ -268,15 +267,13 @@
     "entity.chincho": "Chincho",
 
     //SUBTITLES
-    "subtitles.block.mubble.question_block.mubble.loot.power_up": "? block.mubble drops power up",
-    "subtitles.block.mubble.question_block.mubble.loot.coin": "? block.mubble drops coin",
-    "subtitles.block.mubble.note_block.mubble.jump": "Note block.mubble used",
-    "subtitles.block.mubble.rewind_block.mubble.disappear": "Rewind block.mubble disappears",
-    "subtitles.block.mubble.rewind_block.mubble.reappear": "Rewind block.mubble reappears",
-    "subtitles.item.mubble.annoying_dog.disappear": "Annoying Dog disappears",
-    "subtitles.item.mubble.annoying_dog.waf": "Annoying Dog barks",
-    "subtitles.item.mubble.cape_feather.use": "Cape Feather used",
-    "subtitles.item.mubble.smash_ball.use": "Smash Ball used",
+    "subtitles.block.question_block.mubble.loot.power_up": "? block.mubble drops power up",
+    "subtitles.block.question_block.mubble.loot.coin": "? block.mubble drops coin",
+    "subtitles.block.note_block.jump": "Note Block used",
+    "subtitles.item.annoying_dog.disappear": "Annoying Dog disappears",
+    "subtitles.item.annoying_dog.bark": "Annoying Dog barks",
+    "subtitles.item.cape_feather.use": "Cape Feather used",
+    "subtitles.item.smash_ball.use": "Smash Ball used",
     "subtitles.costume.cappy.ambient": "Cappy mumbles",
     "subtitles.costume.cappy.ambient.nether": "Cappy running out of steam",
     "subtitles.costume.cappy.equip": "Cappy got on someone's head",
