--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -268,15 +268,13 @@
     "entity.chincho": "Chincho",
 
     //SUBTITLES
-    "subtitles.block.mubble.question_block.mubble.loot.super_mushroom": "Bloque ? suelta un súper champiñón",
-    "subtitles.block.mubble.question_block.mubble.loot.coin": "Bloque ? suelta una moneda",
-    //"subtitles.block.mubble.note_block.mubble.jump": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.disappear": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.reappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.disappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.waf": "<newline>",
-    "subtitles.item.mubble.cape_feather.use": "Pluma utilizada",
-    "subtitles.item.mubble.smash_ball.use": "Bola de Smash utilizada",
+    "subtitles.block.question_block.mubble.loot.super_mushroom": "Bloque ? suelta un súper champiñón",
+    "subtitles.block.question_block.mubble.loot.coin": "Bloque ? suelta una moneda",
+    //"subtitles.block.note_block.jump": "<newline>",
+    //"subtitles.item.annoying_dog.disappear": "<newline>",
+    //"subtitles.item.annoying_dog.bark": "<newline>",
+    "subtitles.item.cape_feather.use": "Pluma utilizada",
+    "subtitles.item.smash_ball.use": "Bola de Smash utilizada",
     //"subtitles.costume.cappy.ambient": "<newline>",
     //"subtitles.costume.cappy.ambient.nether": "<newline>",
     //"subtitles.costume.cappy.equip": "<newline>",
