--- a/src/main/resources/assets/mubble/lang/fr_fe.json
+++ b/src/main/resources/assets/mubble/lang/fr_fe.json
@@ -189,8 +189,7 @@
     //"block.mubble.hard_puyo": "<newline>",
     //"block.mubble.iron_puyo": "<newline>",
     //"block.mubble.puyo_block": "<newline>",
-
-    //"block.mubble.rewind_block": "<newline>",
+    
     "block.mubble.koretato_block": "patete qui vi",
 
     //ITEMS
@@ -268,15 +267,15 @@
     "entity.chincho": "chienchau",
 
     //SUBTITLES
-    "subtitles.block.mubble.question_block.mubble.loot.super_mushroom": "cool champi sorti ? blok",
-    "subtitles.block.mubble.question_block.mubble.loot.coin": "fric sorti ? bloc",
-    //"subtitles.block.mubble.note_block.mubble.jump": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.disappear": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.reappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.disappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.waf": "<newline>",
-    "subtitles.item.mubble.cape_feather.use": "plum sauper so qq a utiliser sa",
-    "subtitles.item.mubble.smash_ball.use": "ball mach qq la utilise",
+    "subtitles.block.question_block.mubble.loot.super_mushroom": "cool champi sorti ? blok",
+    "subtitles.block.question_block.mubble.loot.coin": "fric sorti ? bloc",
+    //"subtitles.block.note_block.jump": "<newline>",
+    //"subtitles.block.rewind_block.mubble.disappear": "<newline>",
+    //"subtitles.block.rewind_block.mubble.reappear": "<newline>",
+    //"subtitles.item.annoying_dog.disappear": "<newline>",
+    //"subtitles.item.annoying_dog.bark": "<newline>",
+    "subtitles.item.cape_feather.use": "plum sauper so qq a utiliser sa",
+    "subtitles.item.smash_ball.use": "ball mach qq la utilise",
     //"subtitles.costume.cappy.ambient": "<newline>",
     //"subtitles.costume.cappy.ambient.nether": "<newline>",
     //"subtitles.costume.cappy.equip": "<newline>",
