--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -190,7 +190,6 @@
     //"block.mubble.iron_puyo": "<newline>",
     //"block.mubble.puyo_block": "<newline>",
 
-    "block.mubble.rewind_block": "Bloc Rewind",
     "block.mubble.koretato_block": "Bloc Koretato",
 
     //ITEMS
@@ -268,15 +267,13 @@
     "entity.chincho": "Chincho",
 
     //SUBTITLES
-    "subtitles.block.mubble.question_block.mubble.loot.super_mushroom": "Super champignon sorti d'un bloc ?",
-    "subtitles.block.mubble.question_block.mubble.loot.coin": "Pièce sortie d'un bloc ?",
-    //"subtitles.block.mubble.note_block.mubble.jump": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.disappear": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.reappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.disappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.waf": "<newline>",
-    "subtitles.item.mubble.cape_feather.use": "Plume acrobate utilisée",
-    "subtitles.item.mubble.smash_ball.use": "Balle Smash utilisée",
+    "subtitles.block.question_block.mubble.loot.super_mushroom": "Super champignon sorti d'un bloc ?",
+    "subtitles.block.question_block.mubble.loot.coin": "Pièce sortie d'un bloc ?",
+    //"subtitles.block.note_block.jump": "<newline>",
+    //"subtitles.item.annoying_dog.disappear": "<newline>",
+    //"subtitles.item.annoying_dog.bark": "<newline>",
+    "subtitles.item.cape_feather.use": "Plume acrobate utilisée",
+    "subtitles.item.smash_ball.use": "Balle Smash utilisée",
     //"subtitles.costume.cappy.ambient": "<newline>",
     //"subtitles.costume.cappy.ambient.nether": "<newline>",
     //"subtitles.costume.cappy.equip": "<newline>",
