--- a/src/main/resources/assets/mubble/lang/zh_cn.json
+++ b/src/main/resources/assets/mubble/lang/zh_cn.json
@@ -268,15 +268,15 @@
     "entity.chincho": "钦乔",
 
     //SUBTITLES
-    "subtitles.block.mubble.question_block.mubble.loot.super_mushroom": "问号块:掉落超级蘑菇",
-    "subtitles.block.mubble.question_block.mubble.loot.coin": "问号块:掉落硬币",
-    //"subtitles.block.mubble.note_block.mubble.jump": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.disappear": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.reappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.disappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.waf": "<newline>",
-    "subtitles.item.mubble.cape_feather.use": "披风羽毛:被使用",
-    "subtitles.item.mubble.smash_ball.use": "粉碎球:被使用",
+    "subtitles.block.question_block.mubble.loot.super_mushroom": "问号块:掉落超级蘑菇",
+    "subtitles.block.question_block.mubble.loot.coin": "问号块:掉落硬币",
+    //"subtitles.block.note_block.jump": "<newline>",
+    //"subtitles.block.rewind_block.mubble.disappear": "<newline>",
+    //"subtitles.block.rewind_block.mubble.reappear": "<newline>",
+    //"subtitles.item.annoying_dog.disappear": "<newline>",
+    //"subtitles.item.annoying_dog.bark": "<newline>",
+    "subtitles.item.cape_feather.use": "披风羽毛:被使用",
+    "subtitles.item.smash_ball.use": "粉碎球:被使用",
     //"subtitles.costume.cappy.ambient": "<newline>",
     //"subtitles.costume.cappy.ambient.nether": "<newline>",
     //"subtitles.costume.cappy.equip": "<newline>",
