--- a/src/main/resources/assets/mubble/lang/zh_tw.json
+++ b/src/main/resources/assets/mubble/lang/zh_tw.json
@@ -268,15 +268,15 @@
     "entity.chincho": "欽喬",
 
     //SUBTITLES
-    "subtitles.block.mubble.question_block.mubble.loot.power_up": "問號塊:掉落超級蘑菇",
-    "subtitles.block.mubble.question_block.mubble.loot.coin": "問號塊:掉落硬幣",
-    //"subtitles.block.mubble.note_block.mubble.jump": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.disappear": "<newline>",
-    //"subtitles.block.mubble.rewind_block.mubble.reappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.disappear": "<newline>",
-    //"subtitles.item.mubble.annoying_dog.waf": "<newline>",
-    "subtitles.item.mubble.cape_feather.use": "披風羽毛:被使用",
-    "subtitles.item.mubble.smash_ball.use": "粉碎球:被使用",
+    "subtitles.block.question_block.mubble.loot.power_up": "問號塊:掉落超級蘑菇",
+    "subtitles.block.question_block.mubble.loot.coin": "問號塊:掉落硬幣",
+    //"subtitles.block.note_block.jump": "<newline>",
+    //"subtitles.block.rewind_block.mubble.disappear": "<newline>",
+    //"subtitles.block.rewind_block.mubble.reappear": "<newline>",
+    //"subtitles.item.annoying_dog.disappear": "<newline>",
+    //"subtitles.item.annoying_dog.bark": "<newline>",
+    "subtitles.item.cape_feather.use": "披風羽毛:被使用",
+    "subtitles.item.smash_ball.use": "粉碎球:被使用",
     //"subtitles.costume.cappy.ambient": "<newline>",
     //"subtitles.costume.cappy.ambient.nether": "<newline>",
     //"subtitles.costume.cappy.equip": "<newline>",
