--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -9,34 +9,34 @@
     "block.mubble.vanadium_ore": "Minério de Vanadium",
     "block.mubble.red_bricks": "Tijolos Vermelhos",
     "block.mubble.red_brick_stairs": "Escadas de Tijolos Vermelhos",
-    //"block.mubble.red_brick_slab": "Red Brick Slab",
-    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
-    //"block.mubble.red_brick_wall": "Red Brick Wall",
+    "block.mubble.red_brick_slab": "Laje de Tijolos Vermelhos",
+    "block.mubble.red_brick_vertical_slab": "Laje Vertical de Tijolos Vermelhos",
+    "block.mubble.red_brick_wall": "Parede de Tijolos Vermelhos",
     "block.mubble.white_bricks": "Tijolos Brancos",
     "block.mubble.white_brick_stairs": "Escadas de Tijolos Brancos",
-    //"block.mubble.white_brick_slab": "White Brick Slab",
-    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
-    //"block.mubble.white_brick_wall": "White Brick Wall",
+    "block.mubble.white_brick_slab": "Laje de Tijolos Brancos",
+    "block.mubble.white_brick_vertical_slab": "Laje Vertical de Tijolos Brancos",
+    "block.mubble.white_brick_wall": "Parede de Tijolos Brancos",
     "block.mubble.blunite": "Blunite",
     "block.mubble.blunite_stairs": "Escadas de Blunite",
     "block.mubble.blunite_wall": "Parede de Blunite",
-    //"block.mubble.blunite_slab": "Blunite Slab",
-    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
-    //"block.mubble.blunite_wall": "Blunite Wall",
+    "block.mubble.blunite_slab": "Laje de Blunite",
+    "block.mubble.blunite_vertical_slab": "Laje Vertical de Blunite",
+    "block.mubble.blunite_wall": "Parede de Blunite",
     "block.mubble.polished_blunite": "Blunite Polido",
     "block.mubble.polished_blunite_stairs": "Escadas de Blunite Polido",
-    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
-    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
+    "block.mubble.polished_blunite_slab": "Laje de Blunite Polido",
+    "block.mubble.polished_blunite_vertical_slab": "Laje Vertical de Blunite Polido",
     "block.mubble.carbonite": "Carbonite",
     "block.mubble.carbonite_stairs": "Escadas de Carbonite",
     "block.mubble.carbonite_wall": "Parede de Carbonite",
-    //"block.mubble.carbonite_slab": "Carbonite Slab",
-    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
-    //"block.mubble.carbonite_wall": "Carbonite Wall",
+    "block.mubble.carbonite_slab": "Laje de Carbonite",
+    "block.mubble.carbonite_vertical_slab": "Laje Vertical de Carbonite",
+    "block.mubble.carbonite_wall": "Parede de Carbonite",
     "block.mubble.polished_carbonite": "Carbonite Polido",
     "block.mubble.polished_carbonite_stairs": "Escadas de Carbonite Polido",
-    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
-    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
+    "block.mubble.polished_carbonite_slab": "Laje de Carbonite Polido",
+    "block.mubble.polished_carbonite_vertical_slab": "Laje Vertical de Carbonite Polido",
     "block.mubble.footblock": "Futebloco",
     "block.mubble.white_cloud_block": "Bloco de Nuvem Branca",
     "block.mubble.light_gray_cloud_block": "Bloco de Nuvem Cinza-Claro",
@@ -131,9 +131,9 @@
     "block.mubble.medusa_stone": "Pedra da Medusa",
     "block.mubble.medusa_bricks": "Tijolos de Medusa",
     "block.mubble.medusa_brick_stairs": "Escadas de Tijolos de Medusa",
-    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
-    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
-    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
+    "block.mubble.medusa_brick_slab": "Laje de Tijolos de Medusa",
+    "block.mubble.medusa_brick_vertical_slab": "Laje Vertical de Tijolos de Medusa",
+    "block.mubble.medusa_brick_wall": "Parede de Tijolos de Medusa",
     "block.mubble.blue_candy_cane_pillar": "Pilar de Bengala Doce Azul",
     "block.mubble.light_blue_candy_cane_pillar": "Pilar de Bengala Doce Azul Claro",
     "block.mubble.cyan_candy_cane_pillar": "Pilar de Bengala Doce Ciano",
@@ -166,14 +166,14 @@
     "block.mubble.iron_scaffolding": "Andaime de Ferro",
     "block.mubble.purple_bricks": "Tijolos Roxos",
     "block.mubble.purple_brick_stairs": "Escadas de Tijolos Roxos",
-    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
-    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
-    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
+    "block.mubble.purple_brick_slab": "Laje de Tijolos Roxos",
+    "block.mubble.purple_brick_vertical_slab": "Laje Vertical de Tijolos Roxos",
+    "block.mubble.purple_brick_wall": "Parede Vertical de Tijolos Roxos",
     "block.mubble.cyan_bricks": "Tijolos Cianos",
     "block.mubble.cyan_brick_stairs": "Escadas de Tijolos Cianos",
-    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
-    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
-    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
+    "block.mubble.cyan_brick_slab": "Laje de Tijolos Cianos",
+    "block.mubble.cyan_brick_vertical_slab": "Laje Vertical de Tijolos Cianos",
+    "block.mubble.cyan_brick_wall": "Parede Vertical de Tijolos Cianos",
     "block.mubble.elder_pebbles": "Seixos Antigos",
     "block.mubble.space_matter": "Matéria Espacial",
     "block.mubble.space_obsidian": "Obsidiana Espacial",
