Many fixes + Updated French

--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -8,35 +8,35 @@
     "block.mubble.vanadium_block": "Bloc de vanadium",
     "block.mubble.vanadium_ore": "Minerai de vanadium",
     "block.mubble.red_bricks": "Briques rouges",
-    "block.mubble.red_brick_stairs": "Escaliers en brique rouge",
-    //"block.mubble.red_brick_slab": "Red Brick Slab",
-    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
-    //"block.mubble.red_brick_wall": "Red Brick Wall",
+    "block.mubble.red_brick_stairs": "Escaliers en briques rouges",
+    "block.mubble.red_brick_slab": "Dalle en briques rouges",
+    "block.mubble.red_brick_vertical_slab": "Dalle verticale en briques rouges",
+    "block.mubble.red_brick_wall": "Muret en briques rouges",
     "block.mubble.white_bricks": "Briques blanches",
-    "block.mubble.white_brick_stairs": "Escaliers en brique blanche",
-    //"block.mubble.white_brick_slab": "White Brick Slab",
-    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
-    //"block.mubble.white_brick_wall": "White Brick Wall",
+    "block.mubble.white_brick_stairs": "Escaliers en briques blanches",
+    "block.mubble.white_brick_slab": "Dalle en briques blanches",
+    "block.mubble.white_brick_vertical_slab": "Dalle verticale en briques blanches",
+    "block.mubble.white_brick_wall": "Muret en briques blanches",
     "block.mubble.blunite": "Blunite",
     "block.mubble.blunite_stairs": "Escaliers en blunite",
     "block.mubble.blunite_wall": "Muret en blunite",
-    //"block.mubble.blunite_slab": "Blunite Slab",
-    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
-    //"block.mubble.blunite_wall": "Blunite Wall",
+    "block.mubble.blunite_slab": "Dalle en blunite",
+    "block.mubble.blunite_vertical_slab": "Dalle verticale en blunite",
+    "block.mubble.blunite_wall": "Muret en blunite",
     "block.mubble.polished_blunite": "Blunite poli",
     "block.mubble.polished_blunite_stairs": "Escaliers en blunite poli",
-    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
-    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
+    "block.mubble.polished_blunite_slab": "Dalle en blunite poli",
+    "block.mubble.polished_blunite_vertical_slab": "Dalle verticale en blunite poli",
     "block.mubble.carbonite": "Carbonite",
     "block.mubble.carbonite_stairs": "Escaliers en carbonite",
     "block.mubble.carbonite_wall": "Muret en carbonite",
-    //"block.mubble.carbonite_slab": "Carbonite Slab",
-    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
-    //"block.mubble.carbonite_wall": "Carbonite Wall",
+    "block.mubble.carbonite_slab": "Dalle en carbonite",
+    "block.mubble.carbonite_vertical_slab": "Dalle verticale en carbonite",
+    "block.mubble.carbonite_wall": "Muret en carbonite",
     "block.mubble.polished_carbonite": "Carbonite polie",
     "block.mubble.polished_carbonite_stairs": "Escaliers en carbonite poli",
-    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
-    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
+    "block.mubble.polished_carbonite_slab": "Dalle en carbonite poli",
+    "block.mubble.polished_carbonite_vertical_slab": "Dalle verticale en carbonite poli",
     "block.mubble.footblock": "Bloc de foot",
     "block.mubble.white_cloud_block": "Bloc de nuage blanc",
     "block.mubble.light_gray_cloud_block": "Bloc de nuage gris clair",
@@ -130,10 +130,10 @@
     "block.mubble.vampire_stone": "Roche Vampire",
     "block.mubble.medusa_stone": "Roche de Méduse",
     "block.mubble.medusa_bricks": "Briques de Méduse",
-    "block.mubble.medusa_brick_stairs": "Escaliers en brique de Méduse",
-    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
-    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
-    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
+    "block.mubble.medusa_brick_stairs": "Escaliers en briques de Méduse",
+    "block.mubble.purple_brick_slab": "Dalle en briques de Méduse",
+    "block.mubble.purple_brick_vertical_slab": "Dalle verticale en briques de Méduse",
+    "block.mubble.purple_brick_wall": "Muret en briques de Méduse",
     "block.mubble.blue_candy_cane_pillar": "Pilier de sucre d'orge bleu",
     "block.mubble.light_blue_candy_cane_pillar": "Pilier de sucre d'orge bleu clair",
     "block.mubble.cyan_candy_cane_pillar": "Pilier de sucre d'orge cyan",
@@ -156,7 +156,7 @@
     "block.mubble.marble_zone_stone": "Pierre de la zone Marble",
     "block.mubble.yellow_studiopolis_clapper": "Clap jaune de Studiopolis",
     "block.mubble.blue_studiopolis_clapper": "Clap bleu de Studiopolis",
-    //"block.mubble.spring": "<newline>",
+    "block.mubble.spring": "Ressort",
 
     "block.mubble.scarlet_grass_block": "Bloc d'herbe écarlate",
     "block.mubble.scarlet_grass": "Herbe écarlate",
@@ -165,30 +165,30 @@
 
     "block.mubble.iron_scaffolding": "Échafaudage en fer",
     "block.mubble.purple_bricks": "Briques violettes",
-    "block.mubble.purple_brick_stairs": "Escaliers en brique violette",
-    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
-    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
-    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
+    "block.mubble.purple_brick_stairs": "Escaliers en briques violettes",
+    "block.mubble.purple_brick_slab": "Dalle en briques violettes",
+    "block.mubble.purple_brick_vertical_slab": "Dalle verticale en briques violettes",
+    "block.mubble.purple_brick_wall": "Muret en briques violettes",
     "block.mubble.cyan_bricks": "Briques cyans",
-    "block.mubble.cyan_brick_stairs": "Escaliers en brique cyan",
-    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
-    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
-    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
+    "block.mubble.cyan_brick_stairs": "Escaliers en briques cyans",
+    "block.mubble.cyan_brick_slab": "Dalle en briques cyans",
+    "block.mubble.cyan_brick_vertical_slab": "Dalle verticale en briques cyans",
+    "block.mubble.cyan_brick_wall": "Muret en briques cyans",
     "block.mubble.elder_pebbles": "Anciens galets",
     "block.mubble.space_matter": "Matière spatiale",
     "block.mubble.space_obsidian": "Obsidienne spatiale",
 
-    //"block.mubble.blue_puyo": "<newline>",
-    //"block.mubble.turquoise_puyo": "<newline>",
-    //"block.mubble.green_puyo": "<newline>",
-    //"block.mubble.yellow_puyo": "<newline>",
-    //"block.mubble.red_puyo": "<newline>",
-    //"block.mubble.purple_puyo": "<newline>",
-    //"block.mubble.garbage_puyo": "<newline>",
-    //"block.mubble.point_puyo": "<newline>",
-    //"block.mubble.hard_puyo": "<newline>",
-    //"block.mubble.iron_puyo": "<newline>",
-    //"block.mubble.puyo_block": "<newline>",
+    "block.mubble.blue_puyo": "Puyo bleu",
+    "block.mubble.turquoise_puyo": "Puyo turquoise",
+    "block.mubble.green_puyo": "Puyo vert",
+    "block.mubble.yellow_puyo": "Puyo jaune",
+    "block.mubble.red_puyo": "Puyo rouge",
+    "block.mubble.purple_puyo": "Puyo violet",
+    "block.mubble.garbage_puyo": "Déchet Puyo",
+    "block.mubble.point_puyo": "Point Puyo",
+    "block.mubble.hard_puyo": "Puyo dur",
+    "block.mubble.iron_puyo": "Puyo de fer",
+    "block.mubble.puyo_block": "Block Puyo",
 
     "block.mubble.koretato_block": "Bloc Koretato",
 
@@ -205,7 +205,7 @@
     "item.mubble.tomato": "Tomato",
     "item.mubble.salad": "Salade",
     "item.mubble.cheese": "Fromage",
-    //"item.mubble.totem_of_ascending": "<newline>",
+    "item.mubble.totem_of_ascending": "Totem d'ascendance",
 
     "item.mubble.super_mushroom": "Super champignon",
     "item.mubble.peach": "Pêche",
@@ -250,12 +250,12 @@
 
     "item.mubble.bandana": "Bandana",
 
-    //"item.mubble.snorlax_hat": "<newline>",
+    "item.mubble.snorlax_hat": "Chapeau Ronflex",
 
     "item.mubble.top_hat": "Haut-de-forme",
 
     "item.mubble.ralsei_hat": "Chapeau de Ralsei",
-    //"item.mubble.king_round_mask": "<newline>",
+    "item.mubble.king_round_mask": "Masque King Round",
 
     "item.mubble.baldi_head": "Tête de Baldi",
 
