--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -9,34 +9,34 @@
     "block.mubble.vanadium_ore": "Vanadiumerts",
     "block.mubble.red_bricks": "Rode bakstenen",
     "block.mubble.red_brick_stairs": "Rode bakstenen trap",
-    //"block.mubble.red_brick_slab": "Red Brick Slab",
-    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
-    //"block.mubble.red_brick_wall": "Red Brick Wall",
+    "block.mubble.red_brick_slab": "Rode bakstenen plaat",
+    "block.mubble.red_brick_vertical_slab": "Rode bakstenen verticale plaat",
+    "block.mubble.red_brick_wall": "Rode bakstenen plaat muur",
     "block.mubble.white_bricks": "Witte bakstenen",
     "block.mubble.white_brick_stairs": "Witte bakstenen trap",
-    //"block.mubble.white_brick_slab": "White Brick Slab",
-    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
-    //"block.mubble.white_brick_wall": "White Brick Wall",
+    "block.mubble.white_brick_slab": "Witte bakstenen plaat",
+    "block.mubble.white_brick_vertical_slab": "Witte bakstenen verticale plaat",
+    "block.mubble.white_brick_wall": "Witte bakstenen muur",
     "block.mubble.blunite": "Blunite",
     "block.mubble.blunite_stairs": "Blunite trap",
     "block.mubble.blunite_wall": "Blunite muur",
-    //"block.mubble.blunite_slab": "Blunite Slab",
-    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
-    //"block.mubble.blunite_wall": "Blunite Wall",
+    "block.mubble.blunite_slab": "Blunite plaat",
+    "block.mubble.blunite_vertical_slab": "Blunite verticale plaat",
+    "block.mubble.blunite_wall": "Blunite muur",
     "block.mubble.polished_blunite": "Gepolijst blunite",
     "block.mubble.polished_blunite_stairs": "Gepolijst blunite trap",
-    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
-    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
+    "block.mubble.polished_blunite_slab": "Gepolijst blunite plaat",
+    "block.mubble.polished_blunite_vertical_slab": "Gepolijst blunite verticale plaat",
     "block.mubble.carbonite": "Carbonite",
     "block.mubble.carbonite_stairs": "Carbonite trap",
     "block.mubble.carbonite_wall": "Carbonite muur",
-    //"block.mubble.carbonite_slab": "Carbonite Slab",
-    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
-    //"block.mubble.carbonite_wall": "Carbonite Wall",
+    "block.mubble.carbonite_slab": "Carbonite plaat",
+    "block.mubble.carbonite_vertical_slab": "Carbonite verticale plaat",
+    "block.mubble.carbonite_wall": "Carbonite muur",
     "block.mubble.polished_carbonite": "Gepolijst carbonite",
     "block.mubble.polished_carbonite_stairs": "Gepolijst carbonite trap",
-    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
-    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
+    "block.mubble.polished_carbonite_slab": "Gepolijst carbonite plaat",
+    "block.mubble.polished_carbonite_vertical_slab": "Gepolijst carbonite verticale plaat",
     "block.mubble.footblock": "Voetblok",
     "block.mubble.white_cloud_block": "Wittewolkblok",
     "block.mubble.light_gray_cloud_block": "Lichtgrijzewolkblok",
@@ -128,12 +128,12 @@
     "block.mubble.monochrome_tetris_scaffolding": "Zwart-witte Tetris steiger",
 
     "block.mubble.vampire_stone": "Vampiersteen",
-    "block.mubble.medusa_stone": "Medusasteen",
-    "block.mubble.medusa_bricks": "Medusablokstenen",
-    "block.mubble.medusa_brick_stairs": "Medusablokstenen trap",
-    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
-    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
-    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
+    "block.mubble.medusa_stone": "Medusa's steen",
+    "block.mubble.medusa_bricks": "Medusa's blokstenen",
+    "block.mubble.medusa_brick_stairs": "Medusa's blokstenen trap",
+    "block.mubble.medusa_brick_slab": "Medusa's blokstenen plaat",
+    "block.mubble.medusa_brick_vertical_slab": "Medusa's blokstenen verticale plaat",
+    "block.mubble.medusa_brick_wall": "Medusa's blokstenen muur",
     "block.mubble.blue_candy_cane_pillar": "Blauwe zuurstokpillaar",
     "block.mubble.light_blue_candy_cane_pillar": "Lichtblauwe zuurstokpillaar",
     "block.mubble.cyan_candy_cane_pillar": "Turquoise zuurstokpillaar",
@@ -166,14 +166,14 @@
     "block.mubble.iron_scaffolding": "IJzersteiger",
     "block.mubble.purple_bricks": "Paarse bakstenen",
     "block.mubble.purple_brick_stairs": "Paarse bakstenen trap",
-    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
-    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
-    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
+    "block.mubble.purple_brick_slab": "Paarse bakstenen plaat",
+    "block.mubble.purple_brick_vertical_slab": "Paarse bakstenen verticale plaat",
+    "block.mubble.purple_brick_wall": "Paarse bakstenen muur",
     "block.mubble.cyan_bricks": "Turquoise bakstenen",
     "block.mubble.cyan_brick_stairs": "Turqoise bakstenen trap",
-    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
-    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
-    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
+    "block.mubble.cyan_brick_slab": "Turqoise bakstenen plaat",
+    "block.mubble.cyan_brick_vertical_slab": "Turqoise bakstenen verticale plaat",
+    "block.mubble.cyan_brick_wall": "Turqoise bakstenen muur",
     "block.mubble.elder_pebbles": "Oudere keizels",
     "block.mubble.space_matter": "Ruimte materie",
     "block.mubble.space_obsidian": "Ruimte obsidiaan",
